{
  "version": 4,
  "terraform_version": "0.14.2",
  "serial": 44,
  "lineage": "51a7ff4e-c319-86e6-5e89-36b3a08a7be2",
  "resources": [
    {
      "module": "module.systemshared",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_group_efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:075097575793:security-group/sg-01dc0a76cff94f3d2",
            "description": "security group for FHC EFS storage",
            "egress": [],
            "id": "sg-01dc0a76cff94f3d2",
            "ingress": [],
            "name": "fhc-efs-20201214132555876800000001",
            "name_prefix": "fhc-efs-",
            "owner_id": "075097575793",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security group for FHC EFS storage",
              "sap-sid": "FHC",
              "terraform-module": "systemshared"
            },
            "timeouts": null,
            "vpc_id": "vpc-009cbc51f7bb28df1"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.systemshared",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "NFS",
            "from_port": 2049,
            "id": "sgrule-204203455",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01dc0a76cff94f3d2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.systemshared.aws_security_group.sec_group_efs"
          ]
        }
      ]
    }
  ]
}